fix z-index of bldg

--- a/tigerapps/static/pom/css/map.css
+++ b/tigerapps/static/pom/css/map.css
@@ -23,6 +23,7 @@
 	width:300px;
 	height:580px;
     padding:0 20px 0;
+    z-index:100;
 
 	background-color:#FFEBCC;
     opacity:0.95;
